--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <nav>
 		<ul>
-			<li><a href=""><img src="mail.png" alt="mail Image"/> martasanz@gmail.com</a></li>
+			<li><a href=""><img src="img/mail.png" alt="mail Image"/> martasanz@gmail.com</a></li>
 			<li><a href=""><img src="phone.png" alt="phone Image"/> 123 123 123</a></li>
 			<li><a href=""><img src="ubi.png" alt="ubi Image"/> Sarria, Girona</a></li>
 			<li><a href=""><img src="linkedin.png" alt="linkedin Image"/> linkedin.com/in/martasanz</a></li>
