--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class ="bullet"></div>
 
     <div id="main-header">
-        <img src="Profile.png" alt="Profile Image">
+        <img src="img/Profile.png" alt="Profile Image">
         <div id="info">
             <h1>Marta Sanz</h1>    
             <h3>Cybersecurity Consultant</h3>
@@ -25,16 +25,16 @@
     <nav>
 		<ul>
 			<li><a href=""><img src="img/mail.png" alt="mail Image"/> martasanz@gmail.com</a></li>
-			<li><a href=""><img src="phone.png" alt="phone Image"/> 123 123 123</a></li>
-			<li><a href=""><img src="ubi.png" alt="ubi Image"/> Sarria, Girona</a></li>
-			<li><a href=""><img src="linkedin.png" alt="linkedin Image"/> linkedin.com/in/martasanz</a></li>
+			<li><a href=""><img src="img/phone.png" alt="phone Image"/> 123 123 123</a></li>
+			<li><a href=""><img src="img/ubi.png" alt="ubi Image"/> Sarria, Girona</a></li>
+			<li><a href=""><img src="img/linkedin.png" alt="linkedin Image"/> linkedin.com/in/martasanz</a></li>
 		</ul>
 	</nav> 
     
     <div id="main-content">
         <div class="Section a">
             <div class= "divider"></div>
-            <div class="SectionHeader"><img src="Skills.png" alt="Skills Image"/><h2>SKILLS</h2></div>
+            <div class="SectionHeader"><img src="img/Skills.png" alt="Skills Image"/><h2>SKILLS</h2></div>
             <ul>
                 <li>Critical Thinking<div class="grid a"><div class="grid a color"></div></div></li>
                 <li>Data Analysis<div class="grid b"><div class="grid b color"></div></div></li>
@@ -45,7 +45,7 @@
         </div>
         <div class="Section b">
             <div class= "divider"></div>
-            <div class="SectionHeader"><img src="Education.png" alt="Education Image"/><h2>EDUCATION</h2></div>
+            <div class="SectionHeader"><img src="img/Education.png" alt="Education Image"/><h2>EDUCATION</h2></div>
             <ul>
                 <li>
                     <p><b>BS. in Cybersecurity</b></p>
@@ -61,17 +61,17 @@
         </div>
         <div class="Section c">
             <div class= "divider"></div>
-            <div class="SectionHeader"><img src="Languages.png" alt="Languages Image"/><h2>LANGUAGES</h2></div>
+            <div class="SectionHeader"><img src="img/Languages.png" alt="Languages Image"/><h2>LANGUAGES</h2></div>
             <ul>
-                <li><img src="Spain.png" alt="Spain Image"/><h2>C2</h2></li>
-                <li><img src="Cat.png" alt="Cat Image"/><h2>C2</h2></li>
-                <li><img src="Eng.png" alt="Eng Image"/><h2>C1</h2></li>
-                <li><img src="French.png" alt="French Image"/><h2>B2</h2></li>
+                <li><img src="img/Spain.png" alt="Spain Image"/><h2>C2</h2></li>
+                <li><img src="img/Cat.png" alt="Cat Image"/><h2>C2</h2></li>
+                <li><img src="img/Eng.png" alt="Eng Image"/><h2>C1</h2></li>
+                <li><img src="img/French.png" alt="French Image"/><h2>B2</h2></li>
             </ul>
         </div>
         <div class="Section d">
             <div class= "divider"></div>
-            <div class="SectionHeader"><img src="WorkExperience.png" alt="WorkExperience Image"/><h2>WORK EXPERIENCE</h2></div>
+            <div class="SectionHeader"><img src="img/WorkExperience.png" alt="WorkExperience Image"/><h2>WORK EXPERIENCE</h2></div>
             <p><b>Security Consultant</b></p>
             <p>SN International</p>
             <div class="data">2020 - 2021</div>
